crates/eure-macros/tests/compile_fail/into_eure_variant_flatten_not_supported.rs
use eure::IntoEure;

#[derive(IntoEure)]
enum Test {
    Struct {
        #[eure(flatten)]
        field: String,
    },
}

fn main() {}
