crates/eure-macros/tests/compile_fail/into_eure_variant_flatten_not_supported.stderr
error: #[eure(flatten)] is not yet supported for IntoEure derive on field `field`
 --> tests/compile_fail/into_eure_variant_flatten_not_supported.rs:6:16
  |
6 |         #[eure(flatten)]
  |                ^^^^^^^
